service.yml
apiVersion: v1
kind: Service
metadata:
  name: employeeapp-service
  namespace: employeeapp
spec:
  selector:
    app: employeeapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9092
