ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employeeapp-ingress
  namespace: employeeapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: employeeapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employeeapp-service
                port:
                  number: 9092
